# ekf-slam

./: CreateAssociationsFiles.sh  CreateORBSLAMAssociations.sh  README.md  README.txt  runOrbSlam.sh
EKFSlam/include/: EKFSlam.hpp
EKFSlam/src/: CMakeLists.txt  EKFSlam.cpp  parseFilenameTexts.cpp  runSlamFromBag.cpp
EKFSlamGenCov/: CMakeLists.txt
EKFSlamGenCov/include/: EKFSlam.hpp  ROSMessageManager.hpp  parseFilenameTexts.hpp
EKFSlamGenCov/src/: EKFSlam.cpp  ROSMessageManager.cpp  holdStuff.txt  runSlamFromBag.cpp
plotTrajectory/: ConversionTools.py  CreateTestPlots.py  GenerateConfPlots.py  createGTPlots.py  createSummaryPlots.py
